# sydbox

./: .gitignore  AUTHORS  AUTHORS.mkd  Makefile.am  NEWS  NEWS.mkd  README.mkd  SINGME  TODO  TODO.mkd  autogen.sh  configure.ac  developers.html  download.html  index.html  index.md  screen.css
_layouts/: default.html
compat/: addpredict  addwrite  sandbox
conf/: sydbox.conf
css/: screen.css
data/: Makefile.am  paludis.conf  sydbox.1  sydbox.1.txt  sydbox.conf
m4/: shave.m4
src/: Makefile.am  canonicalize.c  children.c  children.h  commands.h  context.c  context.h  defs.h  dispatch-table.h  dispatch.c  dispatch.h  dispatch32.c  dispatch64.c  flags.h  getcwd.c  getcwd.h  hooker.c  hooker.h  log.c  log.h  loop.c  loop.h  main.c  net.c  net.h  path.c  path.h  proc.c  proc.h  realpath.c  sydbox-config.c  sydbox-config.h  sydbox-log.c  sydbox-log.h  sydbox-utils.c  sydbox-utils.h  sydboxctl.c  syscall.c  syscall.h  trace-ia64.c  (+12 more)
src/libsydbox/: Makefile.am  sydbox-context-internal.h  sydbox-context.c  sydbox-context.h  sydbox-unstable.h  sydbox.h
src/libsydbox/include/sydbox/: context.h  sydbox.h
tests/: Makefile.am  check_children.c  check_path.c  check_sydbox-utils.c  check_sydbox.c  check_sydbox.h  check_syscall.c  check_trace.c  check_util.c  gtest.mk  t01-chmod.bash  t01-util-bash-expand.bash  t01-util-shell-expand.bash  t01-util-shell-expand.sh  t01_util_bash_expand.c  t01_util_shell_expand.c  t02-chown.bash  t02_chown.c  t03-open.bash  t03-open.c  t04-creat.bash  t04_creat.c  t05-lchown.bash  t05-lchown.c  t06-link.bash  t07-mkdir.bash  t07-mkdir.c  t07_mkdir.c  t08-mknod.bash  t08-mknod.c  t09-access.bash  t10-rename-first.bash  t10-rename.bash  t10-rename.c  t11-rename-second.bash  t11-rename-second.c  t12-rmdir.bash  t12-rmdir.c  t13-symlink.bash  t14-truncate.bash  (+5 more)
tests/progtests/: Makefile.am  t01-chmod.bash  t01_chmod.c  t01_chmod_toolong.c  t02-chown.bash  t02_chown.c  t02_chown_toolong.c  t03-open.bash  t03_open_toolong.c  t04-creat.bash  t04_creat_toolong.c  t05-lchown.bash  t05_lchown.c  t06-link.bash  t06_link.c  t07-mkdir.bash  t07_mkdir_toolong.c  t08-mknod.bash  t08_mknod.c  t08_mknod_toolong.c  t09-access.bash  t09_access.c  t10-rename-first.bash  t10_rename_first.c  t11-rename-second.bash  t11_rename_second.c  t12-rmdir.bash  t12_rmdir_toolong.c  t13-symlink.bash  t13_symlink.c  t13_symlink_toolong.c  t14-truncate.bash  t14_truncate.c  t14_truncate_toolong.c  t15-mount.bash  t15_mount.c  t16-umount.bash  t16_umount.c  t17-umount2.bash  t17_umount2.c  (+44 more)
tests/unit/: Makefile.am  test-children.c  test-path.c  test-sydbox-utils.c  test-trace.c
tests/valgrind/: default.supp  valgrind.sh
